# mediadive-growth-db

./: .env.example  .gitignore  Makefile  VERIFY_INTEGRATION.sh  pyproject.toml  readme.md
docs/: COMMAND_REFERENCE.md  GETTING_STARTED.md  INDEX.md  TROUBLESHOOTING.md
docs/archive/: CLEANUP_COMPLETED.md  COMPLETION_SUMMARY.md  CVAE_IMPLEMENTATION.md  CVAE_QUICK_START.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  MEDIADIVE_INTEGRATION_COMPLETE.md  PROJECT_COMPLETION_CHECKLIST.md  QUICK_START.md  README.md  REPO_CLEANUP_PLAN.md  SYSTEM_OVERVIEW.md
docs/guides/: CVAE_GUIDE.md  MEDIADIVE_INTEGRATION_WORKFLOW.md  MEDIADIVE_NCBI_INTEGRATION.md  api_reference.md  mediadive_ncbi_linking.md
notebooks/: cvae_microbial_media_generation.ipynb  mediadive_deep_learning_models.ipynb  top_media_analysis.ipynb
scripts/: build_features.py  ingest_all_organisms.py  integrate_mediadive_ncbi.py  run_ingest.py  train.py  train_cvae.py
src/: __init__.py  config.py
src/api/: client.py
src/api/AGENT/: TOPMEDIA.md
src/db/: init_db.py  queries.py  schema.sql
src/features/: build_dataset.py  genome_features.py  media_vectors.py  strain_features.py
src/ingest/: enrich_growth_conditions.py  fetch_bacdive.py  fetch_genomes.py  fetch_ingredients.py  fetch_media.py  fetch_media_ingredients.py  fetch_ncbi_organisms.py  fetch_strain_growth.py  fetch_strains.py  link_mediadive_to_genomes.py
src/models/: __init__.py  base.py  evaluate.py  growth_predictor.py  media_generator.py
src/training/: __init__.py  trainer.py
src/training/cloud/: launch.py
tests/: conftest.py  test_api_client.py  test_data_integrity.py  test_db.py  test_features.py  test_models.py
